# difflore-cli

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  RENAMES.md  SECURITY.md  dist-workspace.toml
crates/difflore-cli/: Cargo.toml  LICENSE
crates/difflore-cli/.sqlx/: query-036e1aadc253c219b8638670e014ec8f6f5638f2100c89e3b900ed9fabcce9e2.json  query-051494ce59ecdc7ef6e46dfe48af98b41219244af311f24101a735d9a2b2df9d.json  query-08a69890e8a64313912d70cb5d221a7773777f80090dd74e0d10623037f348f3.json  query-0ae6a78d16ce4f6e6cc1b0a448b163bbf32e2a59ee9166cbe60e00aba549cc5b.json  query-0b54a9c714db05fa3a71d00ccf44858a37146d4c512f8a3b8c5116b790d7cf90.json  query-0c56cebb50ab3d6fe4c0d6ec4f020dc379a09cbc891686111833b9decd12bd00.json  query-0c88427cc05710de37e6d9c015145ae835834722e09b093f558cee822fc05713.json  query-11eb8431740e0bd9f9bf07bea3029fa91b8d75e40690b1b4c925f06c5fc5b3a8.json  query-122e8498b11810674cd513c05a5b2a2f1ebc2e5766f7f4cc3c5172ad6a46e1ec.json  query-1a6a415228ba71e757dc5d8f4c7d6c60ca2d97648ebee319bc46cebc917f9c15.json  query-1f0cdbc9947a8c58aeffab497b97850f1264fb3b377b94c4f6deebe13677bb90.json  query-20d652014d2927280a97a787680c810274b33bed39efff76ff710c4cc0fad673.json  query-2179612723f3db2d6bc9be50672a4c411d8a5a4d0de34cc7c34e1fb73b464939.json  query-22b2807ee831787f90b8fbf340271e4f58d09414ff2a8418577cbb5c5973f72a.json  query-29ca53ff0581eddd149c24a3f08183e3b4c8302355dc0b5c22e38aa8f6da9073.json  query-2be65c0ad7a42cec5829fd442480882d2f627e3fc8a68faf2cb764dc6bf78795.json  query-2d77c2eb29e8ada6ca066a6c9d712eff5bd8c5939948a9366dd112ecbd31690e.json  query-4c5c2b9cc35f0840eeb134608e84155647115e6701f51c14f655381b5fce4de3.json  query-50d08295a450997cf36b09369886c1a90cbd936a32b5b9045861df58db460173.json  query-53558d9c87026ae61a84ff4ab566a1a7376215fd6c3dea06f282c35e7c004038.json  query-5755bcfc525eb7a9baef281981cb92fb2bbd7d94cd0226b6689200acbee6a1bb.json  query-7ac527042a15162736a6d21a794136c0ac76244d51ee7820d09a64f46d91affc.json  query-7dc26a985674de19810937ce836438265f4738511ec89cf7e78292502353e802.json  query-7fdce08aeb948e55a1572a458d0c8080ae6508d3fcaf400afbae94cc0f1fb00a.json  query-83f5b412a080f7454a2f943cf8501c767d84e48af82ea8a2aa6c3dd3e113e1a8.json  query-8828dc59fd433674e7a6a7e3d5564f92c1fb504603e90211ee2ed96759e61b86.json  query-8af9cf5fa75e43e7f8fb8f211d2ba6672940310b8189980c8da9142ca862b32e.json  query-8cfd5b1a2eb99a31f0e0843ad2cae2093c6efcf6c6f8d466767acb10c83c6224.json  query-9bf34c113749fddaffb48a34ca1b7e3ed78dc54e808a8cb11b65f902cee390ca.json  query-9da707ded629071ce87ecfefaff5d1b8cceabeb899d7ea80510aed16640a60b7.json  query-9e1e22ae0cad2c0002bf8a0828ade6636ebb2e45bb4c697f0e0e29676f2028b9.json  query-9ee36aceec548692bc09815358a2f65b31e0840450f77d7452fc7fcbe37e0223.json  query-a2b8da5b7785afc8ff16386758879ae39d66c93d9adb126f18bdcccbf68e2102.json  query-a440c9e1f30c19226886d0484f6ade3cdc686f6bb773c527ff4cdbb27ba8a232.json  query-a8e4f23d4a7ab11ecdd6fbafc151ecd940c1514f48314744f21863b6cfc70c78.json  query-a8ffe6d8202e38a3c4f1b28e9710acaecc5df5ff369fc72da2a8a022e4416da5.json  query-add92298369fe5674abc3a63c4aabbd198354503e321209dca9bf2a652360c40.json  query-adfe2e682824836b83252414226d661073b2a81d3ab100db2ea04db0eeef37cd.json  query-b9a41aa4c6b7351320f7b0f2062bfa94380b3e950dd59611b8d485907f2b9e17.json  query-baa780bb7bf14a768f263abed64061b9f86ecd1aa1c04d162acb8ba6a4237f3a.json  (+22 more)
crates/difflore-cli/src/: clients.rs  dispatch.rs  error.rs  hook_cache.rs  hook_forward.rs  lib.rs  main.rs  onboarding.rs  runtime.rs  style.rs  tui_entry.rs
crates/difflore-cli/tests/: hook_capture_disabled_lifecycle.rs  hook_daemon.rs  hook_dedup_skip.rs  hook_shim_fallback.rs  json_stdout.rs
crates/difflore-cli/wix/: main.wxs
crates/difflore-core/: Cargo.toml
crates/difflore-core/.sqlx/: query-0373beeda3fdc130aae741d6caafceec864dc65c8d01bce8f12e247a86580e59.json  query-07e745847e047a532f4deb303b0e595fbfe6ed1619debee20f689abb38d3e2b5.json  query-0ad57e61409b378165c6440c16ce98ebc85bfc664d0799d5d7867d090b8f065c.json  query-0c34bac2b8afbaf0c334103b9c8507e849061fe923f176b68381d125c51a174d.json  query-10287963ab71715e90e665ecba4f16071149adeab0380bf3fd0c8fdc8fe8cf70.json  query-198498fe4f68d8352158da5fbf2638284b7a0c44894d1119ca90c98a1793f5b5.json  query-1b0d31af37d6cd1425e34bd037c791381c7d26748bcb5f24cf935b6a1632399e.json  query-1d90636b4433660837ea0b42caeba7ffdbaee83fdba9bf5f898574d4c877d983.json  query-22741ac5347d7ac904f1e5ae66439ca1fb9fa17497ac1d95a58778279c8ade19.json  query-2659ea6a491b9cec09590646678350d0ff343353693bc29a455c097505f8bcba.json  query-2c8e80d9152347f43355ecb90975fee126d86c519fba1984c939ceafd3d7166d.json  query-2c9546ed4cb76f189edebc4ad0dc7e2dc71fa1303f7a116d097c924cbb7667c5.json  query-2f039431689548cc243756873d58f21a4631d93dd8f1cb7dca964dbe5a8e2814.json  query-300a42294465ef25f099a5f2c4556c37166f282a3ba77b1bd91191b4a071db13.json  query-3b532921d07a24d023ee43d3b37d77931f88a1505a40aef801ed7a9cba209bba.json  query-3e1d1348dd321781b4b1249e566fb942af39c5a04ad3e58d072636561507c5c7.json  query-3e93e80783428d5d71bd3c6f1e87bd2923cfe73f916397a3e1d41dd4e57e0ea9.json  query-4b80b0fac2458b208cbf8d98a91cef882cd7d6a15c4b74a50b955a5ce61fdbbf.json  query-4bc7772bed772f1159cd4c32cc4e1a51b7a983cb4c6807a44ef691340bf6f12f.json  query-5470403c64da59be6cdbb58e703692d8e8e2c8a3ee50fe081198c5f995c4c491.json  query-5769bec0197c75165c33896a9a158418903b1bfabfd1a5399f1b575e9535336a.json  query-644d22447383f82805de5257deef01a4c0f77bfdc6c93ec6fcc2fc1f923f54c6.json  query-6491303ab7f163737d0d6166e6241a26f111fa2821cf4b3b78e306b56e1c3f22.json  query-6c72b1b5195f7127252866c8e8b676b203e997f7b3bf4d21b7ab043ac09bbdb7.json  query-71e03cdea8680309ef0bafc6029704e688839d9c9cc6880c2ec4096038831582.json  query-75bb9e1be17486111098d497cf4d996e6251949fb5bfc2980f3045c468884c30.json  query-79eda09a89fbb93ae1162b97a606eb539aae204c3c378ddb39a3dda314ac6282.json  query-7e7f19f5f88e0de6dbabb60a90b020e4cd6b41f42a65df31e4a95c7b4677a27a.json  query-868b162bf009f0dfc6041fadea71bdb19b0b30f218389e4fd007458b62659236.json  (+30 more)
crates/difflore-core/contracts/: SOURCE  (+1 more)
crates/difflore-tui/: Cargo.toml
(+618 files in other folders)
