[package]
name = "difflore-tui"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
authors = ["Zachary <hello@difflore.dev>"]
description = "Interactive terminal dashboard for the DiffLore rule library, reviews, and rule-hit heatmap."
documentation = "https://github.com/difflore/difflore-cli"
homepage = "https://difflore.dev"
repository = "https://github.com/difflore/difflore-cli"
readme = "../../README.md"
license = "Apache-2.0"
keywords = ["mcp", "tui", "dashboard", "code-review", "claude"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
# `webbrowser` covers `open` (macOS), `xdg-open` (Linux), and
# `cmd /c start` (Windows) in one call — replaces three `cfg(target_os)`
# branches in `open_url`. Same crate already in difflore-cli.
webbrowser = "1"
difflore-core = { path = "../difflore-core", version = "0.1.0" }

[lints]
workspace = true
